--- a/ajax-form/index.html
+++ b/ajax-form/index.html
@@ -5,18 +5,30 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>LiveForm Ajax Form Demo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.4/milligram.min.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 </head>
 
 <body>
-    <form id="contact-form" method="post" action="https://liveformhq.com/form/27fb4351-d2f7-45d3-96ac-8dae0eda2d26">
-        <input id="name" name="name" type="text" />
-        <br />
-        <input id="email" name="email" type="email" />
-        <br />
-        <textarea id="message" name="message" rows=8 cols=40></textarea>
-        <br />
-        <button id="submit" type="submit">Send Message</button>
-    </form>
+    <div class=container>
+      <h1 class='text-center'>Ajax Form Demo</h1>
+      <div id="messages">
+      </div>
+      <div class=row>
+      <div class='column column-50 column-offset-25'>
+        <form id="contact-form" method="post" action="https://liveformhq.com/form/27fb4351-d2f7-45d3-96ac-8dae0eda2d26">
+          <fieldset>
+            <label for="name">Name</label>
+            <input id="name" name="name" type="text" />
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" />
+            <label for="message">Message</label>
+            <textarea id="message" name="message"></textarea>
+            <button class="button-primary" id="submit" type="submit">Send Message</button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
     <script type="text/javascript" charset="utf-8" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8">
         $("#contact-form").on("submit", function(e) {
@@ -32,9 +44,9 @@
                 },
                 success: function(response)
                 {
-                    console.log(response); // response contains the form submission that was just made
-                    alert("Thank you for your submission, we'll get back to you soon :)");
                     $("#contact-form")[0].reset();
+                    $("#messages").text("Thank you for your submission, we'll get back to you soon :)");
+                    console.log(response); // response contains the form submission that was just made
                 },
             });
         });
